[gd_scene load_steps=3 format=3 uid="uid://shutxn8dpbys"]

[ext_resource type="Script" path="res://player/balance.gd" id="1_rwhb4"]
[ext_resource type="PackedScene" uid="uid://cdlefkst24dm8" path="res://player/player_ui.tscn" id="2_twrhs"]

[node name="Balance" type="Node"]
script = ExtResource("1_rwhb4")
leaving_walker_cost = 100
forward_movement_cost = 120
backward_movement_cost = 200
side_movement_cost = 180
preparing_gun_cost = 130
shooting_cost = 150
balance_recovery = 35
bonus_balance_recovery = 65

[node name="BalanceRecoveryTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UI" parent="." instance=ExtResource("2_twrhs")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="BalanceBar" type="ProgressBar" parent="UI"]
visibility_layer = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -62.0
offset_right = 119.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[connection signal="timeout" from="BalanceRecoveryTimer" to="." method="_on_balance_recovery_timer_timeout"]
